# prosig

./: .gitignore  AGENT.md  HISTORY.md  LICENSE  README.md  pyproject.toml
data/: .gitignore  README.md
docs/: README.md  motif_weight.md  prosig_motifs.md
docs/decisions/: README.md
docs/specs/: README.md  cli.md  cluster_go_signatures.md  fetch.md  function_prediction.md  go_accession_clustering.md  go_cluster_complete_linkage_refinement.md  go_mf_natural_language_composer.md  go_pkl.md  go_set_similarity.md  go_similarity.md  inspect_cli.md  motif_discovery.md  prosig_motif_implementation.md  setup_data.md  uniprot_sprot_extraction.md
docs/specs/templates/: role_map.yaml.template
docs/todos/: README.md  backlog.md
notebooks/: README.md
scripts/: README.md  select_simulation_clusters.py
src/prosig/: __init__.py  __main__.py  sequences.py
src/prosig/cli/: __init__.py  app.py  build_library.py  fetch.py  inspect.py  logging.py  scan.py  setup_data.py
src/prosig/data/: __init__.py  cluster_config.yaml.template
src/prosig/go/: __init__.py  build.py  clustering.py  describe.py  similarity.py
src/prosig/io/: __init__.py  download.py  freshness.py
src/prosig/motifs/: __init__.py  prosite.py  scanning.py
src/prosig/prediction/: __init__.py  motif_scoreboard.py
tests/: README.md  test_build_library.py  test_cli.py  test_download.py  test_fetch.py  test_freshness.py  test_go_clustering.py  test_go_similarity.py  test_inspect_cli.py  test_library.py  test_motif_scoreboard.py  test_motifs_prosite.py  test_motifs_scanning.py  test_select_simulation_clusters_script.py  test_sequences.py  test_setup_data.py
