[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prosig"
version = "0.1.0"
description = "Protein signature discovery and function inference"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Junjun Mao", email = "junjun.mao@gmail.com" },
]
keywords = [
  "bioinformatics",
  "protein-sequences",
  "motif-discovery",
  "function-prediction",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "igraph>=0.11",
  "leidenalg>=0.10",
  "numpy>=1.26",
  "scipy>=1.11",
  "typer>=0.12",
]

[project.scripts]
prosig = "prosig.cli.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"prosig.data" = ["*.template"]
"prosig.library.default" = [
  "prosig_motifs.tsv",
  "motif_cluster_scoreboard.pkl",
  "motif_cluster_scoreboard_meta.json",
  "clusters_meta.tsv",
  "go_graph.pkl",
  "accession_mf_go.tsv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
